deployments/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-tracker-auth
  namespace: tracker
spec:
  selector:
    matchLabels:
      app: budget-tracker-auth
  template:
    metadata:
      labels:
        app: budget-tracker-auth
    spec:
      containers:
        - name: budget-tracker-auth
          image: simon7426/budget-tracker-auth-prod:0.2
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: budget-tracker-auth-service
  namespace: tracker
spec:
  selector:
    app: budget-tracker-auth
  ports:
    - port: 8000
      targetPort: 8000
