deployments/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: tracker
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis

---
apiVersion: v1
kind: Service

metadata:
  name: redis
  namespace: tracker
  labels:
    run: redis
spec:
  ports:
    - port: 6379
      protocol: TCP
  selector:
    app: redis
