deployments/transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-tracker-transaction
  namespace: tracker
spec:
  selector:
    matchLabels:
      app: budget-tracker-transaction
  template:
    metadata:
      labels:
        app: budget-tracker-transaction
    spec:
      containers:
        - name: budget-tracker-transaction
          image: simon7426/budget-tracker-transaction-prod:0.1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: budget-tracker-transaction-service
  namespace: tracker
spec:
  selector:
    app: budget-tracker-transaction
  ports:
    - port: 8000
      targetPort: 8000
